--- a/css/style.css
+++ b/css/style.css
@@ -428,6 +428,7 @@ width: calc((100% - 24px * 3) / 4);
     line-height: 1.5;
     letter-spacing: 0.02em;
     width: 264px;
+    
 }
 .bottom-page .logo {
     display: inline-block;
@@ -437,7 +438,7 @@ width: calc((100% - 24px * 3) / 4);
     display: flex;
     
 }
-.social-text {
+.bottom-page-social-text {
     color: #FFF;
     font-weight: 500;
     margin-bottom: 16px;
@@ -445,10 +446,10 @@ width: calc((100% - 24px * 3) / 4);
 .bottom-page-logotype {
     margin-right: 120px
 }
-/*.bottom-page-social {
+.bottom-page-social {
     margin-right: 80px;
 
-}*/
+}
 
 .bottom-page-socials-list {
     display: flex;
@@ -497,7 +498,6 @@ width: calc((100% - 24px * 3) / 4);
     border-radius: 4px;
     border: 1px solid #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    margin-right: 24px;
     padding-left: 16px;
     font-size: 12px;
     line-height: 1.5;
@@ -538,7 +538,6 @@ width: calc((100% - 24px * 3) / 4);
     letter-spacing: 0.04em;
     border: none;
     padding: 8px 24px;
-    gap: 16px;
     border-radius: 4px;
     background: #4D5AE5;
     transition-property: background-color;
@@ -679,17 +678,17 @@ width: calc((100% - 24px * 3) / 4);
 }
 .modal-window-textarea-wrapper {
     margin-bottom: 16px;
+    
 }
 .modal-window-textarea {
+    display: block;
     width: 100%;
     height: 120px;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.40);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     background-color: transparent;
     outline: transparent;
     resize: none;
-    margin-bottom: 16px;
     padding: 8px 16px;
     color: rgba(46, 47, 66, 0.40);
     font-size: 12px;
@@ -724,6 +723,7 @@ width: calc((100% - 24px * 3) / 4);
     cursor: pointer;
     fill: transparent;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-right: 8px;
 }
 
 .modal-window-checkbox:checked + .modal-window-checkbox-label > .modal-window-own-checkbox {
